--- a/host/package.json
+++ b/host/package.json
@@ -7,8 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "systemjs": "^6.11.0",
+    "systemjs-babel": "^0.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
