--- a/remote-component-v17/package.json
+++ b/remote-component-v17/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "antd": "^4.18.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "16",
+    "react-dom": "16"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
